tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless_except_div_mod-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 184
expression: live_ranges
---
rsp          enter:
┊              mov _x, 1
┊   _x         mov _y, 2
┊   ●   _y     add _y, _x
┊       ●      mov rax, _y
┊       rax    cqo
┊   rdx D      idiv 2
┊              mov _x, rax
┊              add _x, 1
┊              add _x, _y
┊            exit:
D              ret

