tests/suite/analyze/snapshots/suite__analyze__live_variables__everything_is_meaningless_except_memory_write.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 252
expression: live_variables
---

 everything_is_meaningless_except_memory_write

         +----------------------------+
         |           enter:           |
         | {rsp}                      |
         | mov _x, 1                  |
         | {rsp, _x}                  |
         | mov _y, 2                  |
         | {rsp, _x, _y}              |
         | mov qword ptr [_x + _y], 5 |
         | {rsp}                      |
         | add _x, 1                  |
         | {rsp}                      |
         | add _y, 1                  |
         | {rsp}                      |
         | jmp exit                   |
         | {rsp}                      |
         +----------------------------+
           |
           |
           v
         +----------------------------+
         |           exit:            |
         | {rsp}                      |
         | ret                        |
         | {}                         |
         +----------------------------+

