tests/suite/analyze/snapshots/suite__analyze__live_variables__memory_write_cant_save_you_all_from_death-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 318
expression: live_ranges
---
rsp          enter:
|              mov _x, 1
|   _x         mov _y, 2
|   |   _y     mov _useless, 0
|   |   |      add _useless, _x
|   ●   ●      mov qword ptr [_x + _y], 5
|              add _x, 1
|              add _y, 1
|              add _useless, _y
|              jmp exit
|            exit:
●              ret

