tests/suite/analyze/snapshots/suite__analyze__live_variables__pass_one_receieve_one.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 39
expression: live_variables
---

 pass_one_receieve_one

   +----------------+
   |     enter:     |
   | {rsp}          |
   | mov _x, 5      |
   | {rsp, _x}      |
   | mov rdi, _x    |
   | {rsp, rdi}     |
   | call black_box |
   | {rax, rsp}     |
   | mov _x, rax    |
   | {rsp, _x}      |
   | mov rax, _x    |
   | {rax, rsp}     |
   | jmp exit       |
   | {rax, rsp}     |
   +----------------+
     |
     |
     v
   +----------------+
   |     exit:      |
   | {rax, rsp}     |
   | ret            |
   | {}             |
   +----------------+

